--- a/content/resources/syllabus_10426-626_2022.md
+++ b/content/resources/syllabus_10426-626_2022.md
@@ -8,10 +8,11 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Document
-title: '3'
+title: Syllabus
 uid: 4e49932e-5c2a-4664-a253-69c81f2d95f2
 video_files:
   video_captions_file: ''
