Sync all content

--- a/content/resources/mit10_426_10_626s22_cr.md
+++ b/content/resources/mit10_426_10_626s22_cr.md
@@ -8,7 +8,9 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
-learning_resource_types: []
+learning_resource_types:
+- Lecture Notes
+- Problem Sets
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Document
 title: Electrochemical Energy Systems Lecture Notes and Problem Sets
