--- a/content/resources/10-426-10-626s22.md
+++ b/content/resources/10-426-10-626s22.md
@@ -5,7 +5,9 @@ draft: false
 file: /courses/10-426-10-626-electrochemical-energy-systems-spring-2022/10-426-10-626s22.jpg
 file_type: image/jpeg
 image_metadata:
-  caption: ''
+  caption: 'An electrochromic window has a thin-film Li-ion battery integrated within
+    the glass. Its transparency and color can be switched with an applied voltage
+    (Image courtesy of Vitswell. License: CC BY-NC-SA.).'
   credit: ''
   image-alt: ''
 learning_resource_types: []
