Sync all content

--- a/content/resources/10-426-10-626s22.md
+++ b/content/resources/10-426-10-626s22.md
@@ -5,9 +5,10 @@ draft: false
 file: /courses/10-426-10-626-electrochemical-energy-systems-spring-2022/10-426-10-626s22.jpg
 file_type: image/jpeg
 image_metadata:
-  caption: 'An electrochromic window has a thin-film Li-ion battery integrated within
-    the glass. Its transparency and color can be switched with an applied voltage
-    (Image courtesy of Vitswell. License: CC BY-NC-SA.).'
+  caption: 'An electrochromic window on Boeing 787 that has a thin-film Li-ion battery
+    integrated within the glass. Its transparency and color can be switched with an
+    applied voltage. (Image courtesy of [Rob Pegoraro](https://www.flickr.com/photos/robpegoraro/18352831699/in/photolist-97Kh9e-pPm6Zh-qTnJBn-tXM4sK-5BJoxP).
+    License: CC BY-NC-SA.)'
   credit: ''
   image-alt: ''
 learning_resource_types: []
