--- a/content/resources/10-426-10-626s22.md
+++ b/content/resources/10-426-10-626s22.md
@@ -10,7 +10,8 @@ image_metadata:
     applied voltage. (Image courtesy of [Rob Pegoraro](https://www.flickr.com/photos/robpegoraro/18352831699/in/photolist-97Kh9e-pPm6Zh-qTnJBn-tXM4sK-5BJoxP).
     License: CC BY-NC-SA.)'
   credit: ''
-  image-alt: ''
+  image-alt: Sky view from an airplane window with its glass tinted various shades
+    of blue
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Image
